correction in progress

--- a/nivedane.tex
+++ b/nivedane.tex
@@ -71,30 +71,28 @@ padapaTiTxkeyanunx niVDi padasaMgarxha mADalu koVridAga adaralilx AyekxyAda pada
 
 \newpage
 
-%raghu, page13
-
-I naDuve pUjayx shirxV sidedhxVshavxra mahAsAvxmigaLavaru pAriBASika padagaLanunx parishiVlisi aMtimavAgi pAriBASikavalalxda kelavu padagaLanunx keYbiTuTx uLidaMte aMtima padagaLanunx Ayekx mADikoTaTxru hAgU avara sUcaneyaMte saMsakxqqta pAriBASika padagaLige niSapxtitx\-yanunx niVDa\-beVkeMdu tiVmARnisi saMpAditavAgidadx elalx padagaLanUnx tumakUrina DA. bi. rAjasheVKarayayxnavarige niSapxtitx sidadhxpaDisi\-koDuvaMte niVDalAyitu. avaru  niSapxtitxgaLanunx dAKalisikoTaTxru. I niSapxtitxyanunx bahuteVka saMsakxqqta padagaLige mAtarx niVDa\-lAgide. 
+I naDuve pUjayx shirxV sidedhxVshavxra mahAsAvxmigaLavaru pAriBASika padagaLanunx parishiVlisi, pAriBASikavalalxda kelavu padagaLanunx keYbiTuTx uLidaMte aMtima padagaLanunx Ayekx mADikoTaTxru. avara sUcaneyaMte saMsakxqqta pAriBASika padagaLige niSapxtitx\-yanunx niVDa\-beVkeMdu tiVmARnisi saMpAditavAgidadx elalx padagaLanUnx tumakUrina DA. bi. rAjasheVKarayayxnavarige niSapxtitx sidadhxpaDisi\-koDuvaMte koVri, avaru  niSapxtitxgaLanunx odagisikoTaTxru. bahuteVka saMsakxqqta padagaLige I niSapxtitxyanunx mAtarx niVDa\-lAgide. 
 
 \medskip
 
-I elalx pUvaRBAviV kAyaRgaLu mugida baLika ulelxVKada padagaLige athaR bareyabeVkAda kelasa pArxraMBavAyitu. Aga kananxDa sAhitayx pariSatitxna kananxDa-kananxDa niGaMTuviniMdalU, itara viVrasheYva pariBASAkoVshagaLalilx adAgaleV koTiTxruva\break athaRgaLanunx yathoVcitavAgi saMdaBaRkekx takakxMte baLasikoLaLxlAyitu. Aga hecucx upayoVgakekx baMda garxMthagaLeMdare kananxDa saMsakxqqti ilAKeya vacana pariBASAkoVsha, kananxDa sAhitayx pariSatitxna kananxDa niGaMTu, matutx basava samitiya viVrasheYva pAri\-BASika padakoVsha. jotege saMsakxqqtadiMda kananxDakekx BASAMtaravAgidadx viVrasheYva pAriBASika padakoVshagaLu. I sivxVkArada kelasadalilx agatayxvidadx kaDegaLalilx sUkatx badalAvaNegaLanunx, saMgarxha hAgU visatxraNegaLanunx mADalAyitu.
+I elalx pUvaRBAviVkAyaRgaLu mugida baLika ulelxVKada padagaLige athaR bareyuva kelasa pArxraMBavAyitu. Aga kananxDa sAhitayx pariSatitxna kananxDa-kananxDa niGaMTuviniMdalU, itara viVrasheYva pariBASAkoVshagaLalilx adAgaleV koTiTxruva athaRgaLanunx yathoVcitavAgi baLasikoLaLxlAyitu. Aga hecucx upayoVgakekx baMda garxMthagaLeMdare kananxDa saMsakxqqti ilAKeya vacana pariBASAkoVsha, kananxDa sAhitayx pariSatitxna kananxDa niGaMTu, matutx basava samitiya viVrasheYva pAri\-BASika padakoVsha. jotege saMsakxqqtadiMda kananxDakekx BASAMtaravAgidadx viVrasheYva pAriBASika padakoVshagaLu. I sivxVkArada kelasadalilx agatayxvidadx kaDegaLalilx sUkatx pariSakxraNe, saMgarxha hAgU visatxraNegaLanunx mADalAyitu.
 
 \medskip
 
-idelalx Agi modala haMtada akaSxrajoVDaNeya kAyaR pArxraMBavAyitu parxyoVga BAgadalilx niVDalAgidadx vacanagaLa parxyoVga BAga apUNaRvAgidAdxga ulelxVKada aBipArxya sapxSaTxvAguvaMte parxyoVgagaLanunx athaRpUNaRvAgi niVDalAyitu. parxti vacanavanunx parishiVlisuvAga mUlaparxtigaLanunx noVDuvaMteyeV kAvayxgaLanunx parishiVlisuvAgalU mUlavanunx noVDiyeV parxti sAlugaLanUnx mAtarx dAKalisabeVkAgitutx. vacanagaLa ulelxVKavanunx niVDuvAga keVvala obabx vacanakArara ulelxVKavanunx niVDuva badalu  pArxtinidhikavAgi karxmavAgi basavaNaNx, alalxmaparxBu, cananxbasavaNaNx hAgU obabxru vacanakAtiRya hAgU ininxtara alakiSxta vacanakArara ulelxVKagaLanunx niVDuvudu sAMsakxqqtika samagarxteyanunx taMdukoDutatxde eMba aBipArxyakekx baralAyitu.
+idelalx Agi modala haMtada akaSxrajoVDaNeya kAyaR pArxraMBavAyitu parxyoVgaBAgadalilx niVDalAgidadx vacanagaLa paThAyxMsha apUNaRvAgidAdxga ulelxVKada aBipArxya sapxSaTxvAguvaMte parxyoVgagaLanunx athaRpUNaRvAgi niVDalAyitu. parxti vacanavanunx parishiVlisuvAga mUlaparxtigaLanunx noVDuvaMteyeV kAvayxgaLanunx parishiVlisuvAgalU mUlavanunx noVDiyeV parxti sAlugaLanUnx mAtarx dAKalisabeVkAgitutx. vacanagaLa ulelxVKavanunx niVDuvAga keVvala oMdu ulelxVKavanunx niVDuva badalu  pArxtinidhikavAgi karxmavAgi basavaNaNx, alalxmaparxBu, cananxbasavaNaNx hAgU obabxru vacanakAtiRya hAgU ininxtara alakiSxta vacanakArara ulelxVKagaLanunx niVDuvudu sAMsakxqqtika samagarxteyanunx taMdukoDutatxde eMba aBipArxyakekx baralAyitu.
 
 \medskip
 
-I kAyaRdalilx neravige baMdadudx ``vacana saMcaya DATfkAM'' aMtajARla. I aMtajARlavanunx DA. O.elf. nAgaBUSaNa\-sAvxmi, shirxV vasudheVMdarx, shirxV ecf.elf. OMshivaparxkAshf, shirxV ke. deVvarAju, shirxVmati ecf. pavitarx.  ivarugaLu sidadhxmADidadx \hbox{aMtajARlada} neravanunx paDeyalAyitu. adara sahAyadiMda I savAlanunx dATalu nidhaRrisalAyitu. I kAyaRkAkxgi jeesfesf saMsethxya shirxV ji. gULapapxsAvxmi, shirxV Arf.esf. honanxsheTiTx, shirxV pi.esf. kumArf,  shirxV maMjunAtha, shirxV pi. parxBusAvxmi, DA. pi.esf. sudiVpf, shirxV enf.emf. kaqSaNxpapx, shirxV ecf.emf. nAgaBUSaNa, shirxV emf.esf. naTarAjf, shirxV pi. gurupAdasAvxmi, shirxV ecf.pi. shirxVdhara muMtAda kananxDa adhAyxpakaru hAgU shirxV emf.esf. maMjunAthf, shirxV sidadhxrAju, shirxV ruderxVshf hAgU itare gaNakayaMtarx sahAyakara neravanunx paDeyalAyitu. I kAyaR mugidu matotxmemx akaSxra joVDaNe kAyaR naDedu \textbf{shivapada ratanxkoVsha}da karaDu sidadhxgoMDitu. idakAkxgi matetx kelavu tiMgaLugaLa samaya hiDiyitu. jotege saMsakxqqtada BAgagaLanunx shirxV ecf.vi. nAgarAjarAvfravaru tididxkoTaTxru. hiVge halavu haMtagaLanunx dATi konege saBAparxti sidadhxvAyitu.
+I kAyaRdalilx namamx neravige baMdadudx ``vacana saMcaya DATfkAM'' I Ayxpf namamx upayoVgakekx baMditu. I Ayxpf anunx DA. O.elf. nAgaBUSaNa\-sAvxmi, shirxV vasudheVMdarx, shirxV ecf.elf. OMshivaparxkAshf, shirxV ke. deVvarAju, shirxVmati ecf. pavitarx.  ivarugaLu sidadhxmADidadx I Ayxpf namamx upayoVgakekx baMditu. \hbox{aMtajARlada} neravanunx paDeyalAyitu. adara sahAyadiMda I savAlanunx dATalu nidhaRrisalAyitu. I kAyaRkAkxgi jeesfesf saMsethxya shirxV ji. gULapapxsAvxmi, shirxV Arf.esf. honanxsheTiTx, shirxV pi.esf. kumArf,  shirxV maMjunAtha, shirxV pi. parxBusAvxmi, DA. pi.esf. sudiVpf, shirxV enf.eM. kaqSaNxpapx, shirxV ecf.emf. nAgaBUSaNa, shirxV emf.esf. naTarAjf, shirxV pi. gurupAdasAvxmi, shirxV ecf.pi. shirxVdhara muMtAda kananxDa adhAyxpakaru hAgU shirxV eM.esf. maMjunAthf, shirxV sidadhxrAju, shirxV ruderxVshf hAgU itare gaNakayaMtarx sahAyakara neravanunx paDeyalAyitu. I kAyaR mugidu matotxmemx akaSxra joVDaNe kAyaR naDedu \textbf{shivapada ratanxkoVsha}da karaDu sidadhxgoMDitu. idakAkxgi matetx kelavu tiMgaLugaLa samaya hiDiyitu. saMsakxqqtada BAgagaLanunx vidAvxnf DA. ecf.vi. nAgarAjarAvfravaru pariSakxrisi koTaTxru. hiVge halavu haMtagaLanunx dATi konege saBAparxti sidadhxvAyitu.
 
 \medskip
 
-I naDuve samitiya sadasayxrAgidadx shirxV enf. basavArAdhayx hAgU DA. esf. vidAyxshaMkara, porx. esf, naMjuMDayayxnavaru vidhivasharAdaru. avara anupa\-sithxti elalx saBegaLalUlx bahaLavAgi kADitu. aMtimavAgi porx. ji.esf. sidadxliMgayayx, DA. Ti.vi. veMkaTAcala shAsitxrXV,  DA. ecf.vi. nAgarAjarAvf, DA. enf.esf. tArAnAtha, DA. si. shivakumArasAvxmi, shirxV. Arf.esf. pUNARnaMda, DA. naMdiVshf haMce ivavaru\-gaLanunx oLagoMDa saMpAdaka samitiyu 40kUkx hecucx saBegaLanunx naDesi saBAparxtiyanunx parishiVlisi, muKayx ulelxVKagaLanunx athaR, niSapxtitxgaLanunx, athaRcACxye, ulelxVKagaLanunx kUlaMkaSavAgi gamanisi niGaMTuvige oMdu sapxSaTx rUpavanunx niVDitu. I saMdaBaRdalilx je{esf}{esf} mahA vidAyxpiVThada shirxV basavaNaNxnavaru hAgU meYsUru vishavxvidAyxnilayada parxsArAMgada nivaqtatx nwkararAda shirxVmati kamalamamxnavaru karaDu tidudxvalilx mADida sahAya bahu doDaDxdu. hiVge aMtimavAgi niGaMTu sidadhxvAyitu.
-
+%raghu, page 13
+I naDuve samitiya sadasayxrAgidadx shirxV enf. basavArAdhayx, DA. esf. vidAyxshaMkara, porx. esf, naMjuMDayayxnavaru vidhivasharAdaru. avara anupa\-sithxti elalx saBegaLalUlx bahaLavAgi kADitu. aMtimavAgi porx. ji.esf. sidadxliMgayayx, DA. Ti.vi. veMkaTAcala shAsitxrXV, vidAvxnf DA. ecf.vi. nAgarAjarAvf, DA. enf.esf. tArAnAtha, DA. si. shivakumArasAvxmi, shirxV. Arf.esf. pUNARnaMda, DA. naMdiVshf haMce ivavaru\-gaLanunx oLagoMDa saMpAdaka samitiyu 40kUkx hecucx saBegaLanunx naDesi saBA\-parxtiyanunx parishiVlisi, muKayx ulelxVKagaLanunx athaR, niSapxtitxgaLanunx, athaRcACxye, ulelxVKagaLanunx kUlaMkaSavAgi gamanisi niGaMTu\-vige oMdu sapxSaTx rUpavanunx niVDitu. I saMdaBaRdalilx je{esf}{esf} mahA vidAyxpiVThada shirxV basavaNaNxnavaru hAgU meYsUru vishavxvidAyxnilayada parxsArAMgada nivaqtatx nwkararAda shirxVmati kamalamamxnavaru karaDu tidudxvalilx mADida sahAya bahu doDaDxdu.
 
 \medskip
 
-BASAshAsatxrXda tatavxgaLige anusAravAgi, veYjAcnxnikavAgi, cAritirxka vivaraNeyiMda kUDidudx, parxmANaBUtavu, samagarxvU Ada \textbf{shivapada ratanxkoVsha}vAgide. idu sumAru sAvira puTagaLa baqhatf garxMthavAgidudx, parxti puTadalilxyU eraDu aMkaNagaLive. I padakoVshadalilx anubaMdhada ulelxVKagaLanunx biTuTx 4,681 muKayx ulelxVKagaLanUnx, sumAru 40,000 kUkx hecucx parxyoVga\-gaLanUnx niVDalAgide. I niGaMTu iduvarege baMdiruva bahuteVka viVrasheYva pAriBASika padakoVshagaLiMda sahAya paDedidadxrU avugaLa saMgarxharUpa\-valalx. I hiMdina elAlx padakoVshagaLigiMta hecicxna adhayxyana sAmagirxyanunx oLagoMDide. 
+BASAshAsatxrXda tatavxgaLige anusAravAgi, veYjAcnxnikavAgi, cAritirxka vivaraNeyiMda kUDidudx, parxmANaBUtavU, samagarxvU Ada \textbf{shivapada ratanxkoVsha} kaqtiyu sumAru sAvira puTagaLa baqhatf garxMthavAgide. parxti puTadalilxyU eraDu aMkaNagaLive. I padakoVshadalilx anubaMdhada ulelxVKagaLanunx biTuTx 4,681 muKayx ulelxVKagaLanUnx, sumAru 40,000 kUkx hecucx parxyoVga\-gaLanUnx niVDalAgide. iduvarege baMdiruva bahuteVka viVrasheYva pAriBASika padakoVshagaLiMda sahAya paDedidadxrU I niGaMTu avugaLa saMgarxharUpa\-valalx. I hiMdina elAlx padakoVshagaLigiMta BinanxvAgi hecicxna adhayxyana sAmagirxyanunx oLagoMDide. 
 
 \newpage
 
@@ -109,22 +107,22 @@ BASAshAsatxrXda tatavxgaLige anusAravAgi, veYjAcnxnikavAgi, cAritirxka vivaraNey
 {\large\bf muKayx ulelxVKa}
 \end{center}
 
-I niGaMTanunx sidadhxpaDisuvAga anusarisiruva karxma, shabadxgaLanunx, avugaLa athaRgaLanunx, avakekx saMbaMdhisida parxyoVga\-gaLanunx ulelxVKisiruva riVti; niSapxtitx BAgavanunx niVDuvAga avalaMbisiruva vidhAna I muMtAda vivaragaLu I keLakaMDaMte ide. padakoVshadalilx muKayx ulelxVKagaLAgi koDalAgiruva shabadxgaLanunx sAdhayxvAdaSuTx maTiTxge parxkaqtirUpadalilxyeV koDalu parxyatinxsa\-lAgide. kelavu samAsa padagaLa rUpadalilxyU ive. AdarU mUrakikxMta hecucx padagaLiruva samAsagaLanunx, viBakatxyXMta padagaLiruva padasamucacxyagaLanunx anubaMdhadalilx niVDalAgide. kaNatxpipxniMda kelavu parxkaqtirUpada ulelxVKagaLu biTuTxhoVgidudx avugaLanunx anubaMdhadalilx seVrisalAgide. matutx 14 pAyiMTf dapapx akaSxradalilx I padagaLanunx dAKalisalAgide. muKayx ulelxVKavanunx anusarisikoMDu baMdiruva ulelxVKagaLanunx muKayx ulelxVKada keLage niVDi avugaLige saMKeyxyanunx niVDalAgide. \textbf{udAharaNege: nAda: 1. shiva; sAthxvara-jaMgamAtamxkavAda jagatutx biMdu-nAdarUpa\-dalilxde. avugaLalilx shakitxyu biMdu. shivanu nAda. nAdavu biMduvige AdhAra. biMduvu jagatitxge AdhAra. iveraDara samAgama jagatitxge AdhAravAgive:}
+I niGaMTanunx sidadhxpaDisuvAga anusarisiruva karxma, shabadxgaLanunx, avugaLa athaRgaLanunx, avakekx saMbaMdhisida parxyoVga\-gaLanunx ulelxVKisiruva riVti; niSapxtitx BAgavanunx niVDuvAga avalaMbisiruva vidhAna muMtAda vivaragaLu I keLakaMDaMte ide. padakoVshadalilx muKayx ulelxVKagaLAgi koDalAgiruva shabadxgaLanunx sAdhayxvAdaSuTx maTiTxge parxkaqtirUpadalilxyeV koDalu parxyatinxsa\-lAgide. kelavu samAsapadagaLa rUpadalilxyU ive. AdarU mUrakikxMta hecucx padagaLiruva samAsagaLanunx, viBakatxyXMta padagaLiruva padasamucacxyagaLanunx anubaMdhadalilx niVDalAgide. kaNatxpipxniMda kelavu parxkaqtirUpada ulelxVKagaLu biTuTxhoVgidudx avugaLanunx anubaMdhadalilx seVrisalAgide. I padagaLanunx 14 pAyiMTf dapapx akaSxradalilx dAKalisalAgide. muKayx ulelxVKavanunx anusarisikoMDu baMdiruva ulelxVKagaLanunx muKayx ulelxVKada keLage niVDi avugaLige saMKeyxyanunx niVDalAgide. udAharaNege: nAda: 1. shiva; sAthxvara-jaMgamAtamxkavAda jagatutx biMdu-nAdarUpa\-dalilxde. avugaLalilx shakitxyu biMdu. shivanu nAda. nAdavu biMduvige AdhAra. biMduvu jagatitxge AdhAra. iveraDara samAgama jagatitxge AdhAravAgive:
 \begin{quote}
-{\sl\bfseries biMdunAdAtamxkaM savaRM jagatf sAthxvarajaMgamamf |}\\[3pt]
-{\sl\bfseries biMduH shakitxH shivoV nAdaH shivashakAtxyXtamxkaM jagatf ||}\\[3pt]
-{\sl\bfseries nAdAdhAramayaM biMduH biMdAvxdhAramidaM jagatf |}\\[3pt]
-{\sl\bfseries jagadAdhAraBUtw hi biMdunAdw vayxvasithxtw ||}\hfill (caM.A., kirx.pA., 3. 13-14, 17)
+{\sl biMdunAdAtamxkaM savaRM jagatf sAthxvarajaMgamamf |}\\[3pt]
+{\sl biMduH shakitxH shivoV nAdaH shivashakAtxyXtamxkaM jagatf ||}\\[7pt]
+{\sl nAdAdhAramayaM biMduH biMdAvxdhAramidaM jagatf |}\\[3pt]
+{\sl jagadAdhAraBUtw hi biMdunAdw vayxvasithxtw ||}\hfill (caM.A., kirx.pA., 3. 13-14, 17)
 \end{quote}
 
 \noindent
-\textbf{2. nAda biMdu kale eMba jagatitxge kAraNavAda mUru tatatxvXgaLalilx oMdu. nAdarUpavAda shivaneV liMga:}
+2. nAda biMdu kale eMba jagatitxge kAraNavAda mUru tatatxvXgaLalilx oMdu. nAdarUpavAda shivaneV liMga:
 \begin{quote}
-{\sl\bfseries nAdarUpaH shivaH sAkASxlilxMgamitayxBidhiVyateV |}\hfill {(sU.A., kirx.pA., 6.3)}\\[5pt]
-{\sl\bfseries biMduH shakitxH shivoV nAdaH kalA saMyoVga Eva ca |}\\[2pt]
-{\sl\bfseries shivashakotxyXVBaRveVdoyxVgoV jagatfsaqSaTxyXthaRkAraNamf |}\hfill {(shi.ta.ra., BA-1, 1.4.25)}\\[5pt]
-{\sl\bfseries nAdoV liMgamiti porxVkotxV biMduraMgamitiVritaH}\\[2pt]
-{\sl\bfseries kalA saMyoVga ituyxkAtx tayoVliRMgAMgayoVsatxthA}\hfill {(shivasU. 29-68)}
+{\sl nAdarUpaH shivaH sAkASxlilxMgamitayxBidhiVyateV |}\hfill {(sU.A., kirx.pA., 6.3)}\\[7pt]
+{\sl biMduH shakitxH shivoV nAdaH kalA saMyoVga Eva ca |}\\[2pt]
+{\sl shivashakotxyXVBaRveVdoyxVgoV jagatfsaqSaTxyXthaRkAraNamf |}\hfill {(shi.ta.ra., BA-1, 1.4.25)}\\[7pt]
+{\sl nAdoV liMgamiti porxVkotxV biMduraMgamitiVritaH}\\[2pt]
+{\sl kalA saMyoVga ituyxkAtx tayoVliRMgAMgayoVsatxthA}\hfill {(shivasU. 29-68)}
 \end{quote}
 
 \medskip
@@ -144,18 +142,18 @@ mU{\ru} te{\ra}nAgi kaLe nAda varabiMdu\-veMdu BeVdisidAdideVshikana caraNAMbuja
 \end{center}
 \medskip
 
-oMdu shabadxkekx parxyoVgagaLanunx niVDuvAga modalige saMsakxqqta parxyoVgagaLanunx niVDi, anaMtara vacanada parxyoVgagaLanunx baLika kananxDa kAvayx parxyoVgagaLanunx niVDalAgide. vacanagaLa parxyoVgagaLanunx niVDuvAga kananxDa matutx saMsakxqqti ilAKeyu sidadhxpaDisiruva vacana saMpuTagaLige anusAravAgi niVDalAgide. koneyalilx rUDhi matutx shivAnuBava shabadxkoVshagaLa parxyoVgagaLanunx koDalAgide. muKayx ulelxVKada anaMtara koTiTxruva parxyoVgagaLa AkaragaLanunx sUcisalAgide.
+oMdu shabadxkekx parxyoVgagaLanunx niVDuvAga modalige saMsakxqqta parxyoVgagaLanunx niVDi, anaMtara vacanada parxyoVgagaLanunx, baLika kananxDa kAvayxparxyoVgagaLanunx niVDalAgide. vacanagaLa parxyoVgagaLanunx niVDuvAga kananxDa matutx saMsakxqqti ilAKeyu sidadhxpaDisiruva vacana saMpuTagaLige anusAravAgi niVDalAgide. koneyalilx rUDhi matutx shivAnuBava shabadxkoVshagaLa parxyoVgagaLanunx koDalAgide. muKayx ulelxVKada anaMtara, parxyoVgagaLa AkaragaLanunx sUcisalAgide.
 
 \medskip
 
-saMsakxqqtadiMda parxyoVgagaLanunx koDuvAga kAlAnukarxmaNikeyanunx hAgU avugaLanunx yAva garxMthadiMda yAva saMdhi, sholxVkadiMda Ayudx koDalAgide eMdu tiLisalAgide. hAgeyeV vacanagaLiMda sUcisuvAga kaMsadalilx samagarx vacana \hbox{saMpuTada} saMKeyx hAgU vacanakArara saMkiSxpatx nAmasUci hAgU vacanada saMKeyx matutx puTasaMKeyxgaLanunx niVDalAgide. kAvayx\-gaLanunx niVDuvAga kUDa kAvayxda shiVSiRkeya saMkiSxpatxsUci, saMdhi, adhAyxyada saMKeyxyanunx niVDalAgide. {\bf udAharaNege: Eka\-BAjanasathxla: aikayxsathxlada nAlukx avAMtarasathxlagaLalilx oMdu; shivanoMdige beretuhoVda sAdhakanige elalxvU shivAdevxYta eMdu BAvisuva sithxti; I jagatetxlalxvU shivamayaveMdu BAvisuva sAdhakanige shivanobabxneV EkeYka AsharxyanAgidAdxne eMdu nirUpisuva sathxla; tananxnunx, samasatx jagatatxnunx matutx shivananunx oMdAgi (adevxYta) BAvisuvudariMda shivaparxsAdavU tananx parxsAdaveV Agide eMba parxsAdadalilx aikayxmatiyuLaLxvanAgutAtxne:}
+saMsakxqqtadiMda parxyoVgagaLanunx koDuvAga kAlAnukarxmaNikeyanunx hAgU avugaLanunx yAva garxMtha, yAva saMdhi, sholxVkadiMda Ayudx koDalAgide eMdu tiLisalAgide. hAgeyeV vacanagaLiMda sUcisuvAga kaMsadalilx samagarx vacana \hbox{saMpuTada} saMKeyx hAgU vacanakArara saMkiSxpatx nAmasUci, vacanada saMKeyx matutx puTasaMKeyxgaLanunx niVDalAgide. kAvayx\-gaLanunx niVDuvAga kUDa kAvayxda shiVSiRkeya saMkiSxpatxsUci, saMdhi, adhAyxyada saMKeyxyanunx niVDalAgide. udAharaNege: Eka\-BAjanasathxla: aikayxsathxlada nAlukx avAMtarasathxlagaLalilx oMdu; shivanoMdige beretuhoVda sAdhakanige elalxvU shivAdevxYta eMdu BAvisuva sithxti; I jagatetxlalxvU shivamayaveMdu BAvisuva sAdhakanige shivanobabxneV EkeYka AsharxyanAgidAdxne eMdu nirUpisuva sathxla; tananxnunx, samasatx jagatatxnunx matutx shivananunx oMdAgi (adevxYta) BAvisuvudariMda shivaparxsAdavU tananx parxsAdaveV Agide eMba parxsAdadalilx aikayxmatiyuLaLxvanAgutAtxne:
 \begin{quote}
-{\sl\bfseries aikayxsathxlamidaM porxVkatxM catudhAR munipuMgava |}\\[3pt]
-{\sl\bfseries aikayxmAcArasaMpatitxH EkaBAjanameVva ca ||}\\[3pt]
-{\sl\bfseries vishavxM shivamayaM ceVti sadA BAvayatoV dhiyA |}\\[3pt]
-{\sl\bfseries shiveYkaBAjanAtamxtAvxdeVkaBAjanamucayxteV ||}\\[3pt]
-{\sl\bfseries savxsayx savaRsayx loVkasayx shivAsAyxdevxYtadashaRnAtf |}\\[3pt]
-{\sl\bfseries EkaBAjanayoVgeVna parxsAdeYkayxmatiBaRveVtf ||}\hfill (si.shi., 14. 3, 28-29)
+{\sl aikayxsathxlamidaM porxVkatxM catudhAR munipuMgava |}\\[3pt]
+{\sl aikayxmAcArasaMpatitxH EkaBAjanameVva ca ||}\\[5pt]
+{\sl vishavxM shivamayaM ceVti sadA BAvayatoV dhiyA |}\\[3pt]
+{\sl shiveYkaBAjanAtamxtAvxdeVkaBAjanamucayxteV ||}\\[5pt]
+{\sl savxsayx savaRsayx loVkasayx shivAsAyxdevxYtadashaRnAtf |}\\[3pt]
+{\sl EkaBAjanayoVgeVna parxsAdeYkayxmatiBaRveVtf ||}\hfill (si.shi., 14. 3, 28-29)
 \end{quote}
 
 \noindent
@@ -171,7 +169,7 @@ EkaBAjanasathxla, sahajaBoVjanasathxla eMba eMTu sathxlaM\-gaLanunx sheVSAMgasav
 {\large\bf athaR vivaraNa karxma}
 \end{center}
 
-padagaLa athaRvanunx vivarisuvAga modalu vAcAyxthaRvanunx athavA sAmAnayxvAda athaRvanunx heVLi AmeVle pAriBASika athaRvanunx koDalAgide. kelavu kaDe parxyoVgagaLu doreyade idadxrU avu pAriBASika athaRgaLanunx koDuvaMtidadxre avu\-gaLanUnx seVrisalAgide. pAriBASika padagaLa athaR sapxSaTxvAguvaMte saMkiSxpatxvAgi vivaraNe niVDi, adeV athaR baruva beVre padagaLanunx payARyavAgi koDalAgide. oMdakikxMta hecucx athaRgaLidadxre 1, 2, 3 hiVge saMKeyxgaLanunx koTuTx vividha athaRgaLanunx niVDalAgide. udAharaNege: aMga: 1. oDalu, deVha 2. deVhada oMdu BAga; avayava; 3. tavxkukx athavA camaR 4. Atamx 5. shudadhxjiVvAtamx hiVge `aMga' padakekx iruva oTuTx 20 vividha athaRgaLanunx niVDalAgide. muKayx shabadxgaLige irabahudAda sAdaqshayxgaLanunx itara shabadxgaLoMdige ``parAmashiRsi(parA)'', ``visheVSa'', ``noVDi'' eMba sUcanegaLa mUlaka gamana seLeyalAgide. udAharaNege : \textbf{``aMkurashiVla'' (parA: sadAcAra) /aMgavideyx parA- aMga} itAyxdi. aMteyeV shabadxda oMdu athaR adara jAcnxtishabadxda athavA beVroMdu shabadxda athaRkekx samAnavAgidadxre A eraDaneya shabadxda athaRvanunx matetx ulelxVKisade samAnAthaRka cihenx (=) hAki sUcisalAgide. udAharaNege: \textbf{aMgaleVpasathxLa=aMgaleVpanasathxLa} matutx \textbf{aMgaliMgasaMga=aMgaliMgasaMbaMdha} itAyxdi.
+padagaLa athaRvanunx vivarisuvAga modalu vAcAyxthaRvanunx athavA sAmAnayxvAda athaRvanunx heVLi AmeVle pAriBASika athaRvanunx koDalAgide. kelavu kaDe parxyoVgagaLu doreyade idadxrU avu pAriBASika athaRgaLanunx koDuvaMtidadxre avu\-gaLanUnx seVrisalAgide. pAriBASika padagaLa athaR sapxSaTxvAguvaMte saMkiSxpatxvAgi vivaraNe niVDi, adeV athaR baruva beVre padagaLanunx payARyavAgi koDalAgide. oMdakikxMta hecucx athaRgaLidadxre 1, 2, 3 hiVge saMKeyxgaLanunx koTuTx athaRgaLanunx niVDalAgide. udAharaNege: aMga: 1. oDalu, deVha 2. deVhada oMdu BAga; avayava; 3. tavxkukx athavA camaR 4. Atamx 5. shudadhxjiVvAtamx hiVge `aMga' padakekx iruva oTuTx 20 vividha athaRgaLanunx niVDalAgide. muKayx shabadxgaLige irabahudAda sAdaqshayxgaLanunx itara shabadxgaLoMdige ``parAmashiRsi(parA)'', ``visheVSa'', ``noVDi'' eMba sUcanegaLa mUlaka gamana seLeyalAgide. udAharaNege : {``aMkurashiVla'' (parA: sadAcAra) /aMgavideyx parA- aMga} itAyxdi. aMteyeV shabadxda oMdu athaR adara jAcnxtishabadxda athavA beVroMdu shabadxda athaRkekx samAnavAgidadxre A eraDaneya shabadxda athaRvanunx matetx ulelxVKisade samAnAthaRka cihenx (=) hAki sUcisalAgide. udAharaNege: aMgaleVpasathxLa=aMgaleVpanasathxLa matutx aMgaliMgasaMga=aMgaliMgasaMbaMdha itAyxdi.
 
 \newpage
 
@@ -180,9 +178,8 @@ padagaLa athaRvanunx vivarisuvAga modalu vAcAyxthaRvanunx athavA sAmAnayxvAda at
 \bigskip
 \end{center}
 \begin{itemize}
-\item {\bf pUNaR virAma (.)} : muKayx ulelxVKada anaMtara adu saMsakxqqta/ vacana/ kAvayxgaLiMda mAtarx parxyoVgagaLanunx niVDa\-lAgideyeV eMbudanunx kaMsa\-dalilx sUcisida naMtara hAgU athaRCAyeyanunx toVrisuva 1, 2 muMtAda saMKeyxgaLa muMdeyU; athaR, parxyoVga\-gaLu modalAda elalx vivaragaLU mugida meVle niSapxtitx AraMBagoLuLxva pUvaRdalilx; udadhxrisida  parxyoVgagaLa AkaragaLa saMkiSxpatx sUciya kaqti hAgU kataqRvina muMde hAgU parA\,(parAmasheR), noVDi, visheVSa muMtAda saMkeVtagaLa muMde pUNaRvirAma cihenxyanunx baLasalAgide. \textbf{udAharaNege: nAdacakarx: (va). cakarxvu ratha calisalu AdhAravAgiruvaMte pArxpaMcika vayxvahAragaLige kAraNavAgiruva shivashakitx; mUla\-tatatxvX:} kAlacakarx kamaRcakarx nAdacakarx biMducakarx I nAlukx cakarxva sAdhisiheveMba hiriyarelalx keTuTxhoVdaru ...nAdacakarx jaMgama\-keSxVtarx biMducakarx parxsAdakeSxVtarx (savasaM. 3; cenanxba. 293-92); kAlacakarx kamaRcakarx nAdacakarx biMducakarxdoLage huTaTxda yoVni\-yilalx, meTaTxda nela\-vilalx (savasaM. 3; cenanxba. 1151-397).
+\item {\bf pUNaR virAma (.)} : muKayx ulelxVKada anaMtara adu saMsakxqqta/ vacana/ kAvayxgaLiMda mAtarx parxyoVgagaLanunx niVDa\-lAgideyeV eMbudanunx kaMsa\-dalilx sUcisida naMtara hAgU athaRCAyeyanunx toVrisuva 1, 2 muMtAda saMKeyxgaLa muMdeyU; athaR, parxyoVga\-gaLu modalAda elalx vivaragaLU mugida meVle niSapxtitx AraMBagoLuLxva pUvaRdalilx; udadhxrisida  parxyoVgagaLa AkaragaLa saMkiSxpatx sUciya kaqti hAgU kataqRvina muMde hAgU parA\,(parAmasheR), noVDi, visheVSa muMtAda saMkeVtagaLa muMde pUNaRvirAma cihenxyanunx baLasalAgide. udAharaNege: nAdacakarx: (va). cakarxvu ratha calisalu AdhAravAgiruvaMte pArxpaMcika vayxvahAragaLige kAraNavAgiruva shivashakitx; mUla\-tatatxvX: kAlacakarx kamaRcakarx nAdacakarx biMducakarx I nAlukx cakarxva sAdhisiheveMba hiriyarelalx keTuTxhoVdaru ...nAdacakarx jaMgama\-keSxVtarx biMducakarx parxsAdakeSxVtarx (savasaM. 3; cenanxba. 293-92); kAlacakarx kamaRcakarx nAdacakarx biMducakarxdoLage huTaTxda yoVni\-yilalx, meTaTxda nela\-vilalx (savasaM. 3; cenanxba. 1151-397).
 
-\smallskip
 \noindent
 (nAdasayx cakarxM - nAdacakarxM)
 
@@ -195,7 +192,7 @@ padagaLa athaRvanunx vivarisuvAga modalu vAcAyxthaRvanunx athavA sAmAnayxvAda at
 
 \item {\bf adhaRvirAma (;)} : parxyoVgavanunx koDuvAga adara Akaravanunx tiLisuvAga kaMsada oLage adaralUlx vacanagaLa saMpuTavanunx tiLisuvAga AyA saMpuTagaLa saMKeyxya naMtara I cihenxyanunx baLasalAgide.
 
-\item  parxyoVgavanunx koDuvAga oMdu parxyoVga mugidu matotxMdu parxyoVga AraMBavAguva munanx  adhaRvirAmavanunx baLasalAgide. \textbf{uhAharaNege : aMgatarxya: (va). 1. tAyxgAMga, BoVgAMga matutx yoVgAMga eMba mUru shariVragaLu. ivugaLu karxmavAgi sUthxla (deVha), sUkaSxmX (pArxNa), kAraNa (Atamx) shariVragaLenisive. 2. ivugaLu karxmavAgi sUthxla, sUkaSxmX matutx kAraNa eMba mUru shariVragaLu. 3. shudadhx, nimARya, nimaRla eMba mUru aMgagaLu (deV.saM.ba., va. 1196).}
+\item  parxyoVgavanunx koDuvAga oMdu parxyoVga mugidu matotxMdu parxyoVga AraMBavAguva munanx  adhaRvirAmavanunx baLasalAgide. uhAharaNege : aMgatarxya: (va). 1. tAyxgAMga, BoVgAMga matutx yoVgAMga eMba mUru shariVragaLu. ivugaLu karxmavAgi sUthxla (deVha), sUkaSxmX (pArxNa), kAraNa (Atamx) shariVragaLenisive. 2. ivugaLu karxmavAgi sUthxla, sUkaSxmX matutx kAraNa eMba mUru shariVragaLu. 3. shudadhx, nimARya, nimaRla eMba mUru aMgagaLu (deV.saM.ba., va. 1196).
 
 \item {\bf vivaraNa virAma (:)} parxdhAna ulelxVKada naMtara hAgU shabadxkekx athaRvanunx koDuva modalu hAgU parxyoVgagaLanunx niVDuva modalu vivaraNa virAmavanunx upayoVgisalAgide. \textbf{udAharaNege: aMgaBavi: (va). shivadiVkASxsaMsAkxravilalxdavanu; liMgAMgasAmarasayxvilalxdavana deVha:}
 
@@ -210,7 +207,7 @@ padagaLa athaRvanunx vivarisuvAga modalu vAcAyxthaRvanunx athavA sAmAnayxvAda at
 
 \item {\bf samAnAthaRka cihenx (=)} : muKayx ulelxVKavanunx vivarisuva vivaraNeyu matotxMdu ulelxVKadalilx vivaravAgi baMdidadxre A padakekx I cihenxyanunx baLasalAgide. \textbf{udAharaNe: aMgaleVpasathxla = aMgaleVpanasathxla}. ililx aMgaleVpanasathxladalilx adara vicAragaLu vivaravAgi aBivayxkatxgoMDive. aveV vivaragaLanUnx aMgaleVpasathxlakUkx anavxyisikoLaLxbeVku. avugaLanunx matetx\break niVDuvudariMda punarAvataRneyAgutatxde. AdudariMda I cihenxyanunx baLasi adara vivaragaLiruva padavanunx sUcisalAgide.
 
-\item {\bf cwka kaMsa [ \ ]} : parxyoVgagaLanunx udadhxrisuvAga avugaLa pada, athaRsaMdigadhxtege kAraNavAgidadxre athavA alilx matotxMdu akaSxra bara\-beVkAgitutx enisidAga saMpAdaka maMDaLiyu cwka kaMsa [ \ ] baLasi parxshAnxthaRka cihenxyanunx hAkalAgide.
+\item {\bf cwka kaMsa [ \ ]} : parxyoVgagaLanunx udadhxrisuvAga avugaLa pada, athaRsaMdigadhxtege kAraNavAgidadxre athavA alilx matotxMdu akaSxra bara\-beVkAgitutx enisidAga saMpAdaka maMDaLiyu cwka kaMsavanunx [ \ ] baLasi parxshAnxthaRka cihenxyanunx hAkide.
 \end{itemize}
 
 \medskip
@@ -218,19 +215,19 @@ padagaLa athaRvanunx vivarisuvAga modalu vAcAyxthaRvanunx athavA sAmAnayxvAda at
 \begin{center}
 {\large\bf akaSxragaLa gAtarx}
 \end{center}
-{\bf 13 pAyiMTf dapapx akaSxra :} 
+{\bf 13 gAtarx dapapx akaSxra :} 
 \begin{enumerate}
 \item padakoVshada muKayx ulelxVKada shabadxgaLige I gAtarxda akaSxragaLanunx baLasalAgide.
 \item oMdu muKayx padakekx, ininxtara athaRCAye idAdxga A padagaLanunx sUcisalu I gAtarxda akaSxragaLanunx baLasalAgide.
 \end{enumerate}
 
 \noindent
-{\bf 12 pAyiMTf dapapx akaSxra :} muKayx ulelxVKada shabadxda athaRgaLige dapapxkaSxragaLalilx I gAtarxda akaSxravanunx baLasalAgide.
+{\bf 12 gAtarx dapapx akaSxra :} muKayx ulelxVKada shabadxda athaRgaLige dapapxkaSxragaLalilx I gAtarxda akaSxravanunx baLasalAgide.
 
 \medskip
 
 \noindent
-{\bf 12 pAyiMTf sAdA akaSxra :} parxyoVgagaLanunx hAgU niSapxtitxgaLanunx I gAtarxda akaSxradalilx niVDalAgide.
+{\bf 12 gAtarx sAdA akaSxra :} parxyoVgagaLanunx hAgU niSapxtitxgaLanunx I gAtarxda akaSxradalilx niVDalAgide.
 
 \bigskip
 
@@ -238,7 +235,7 @@ padagaLa athaRvanunx vivarisuvAga modalu vAcAyxthaRvanunx athavA sAmAnayxvAda at
 {\large\bf itara aMshagaLu}
 \end{center}
 \begin{enumerate}
-\item kananxDa matutx saMsakxqqti ilAKeya vacana saMpuTagaLiMda ulelxVKagaLanunx Ayekx mADikoMDiruvudariMda muKayx ulelxVKadalilx shakaTareVPa(\char'273) hAgU raLa( ) vanunx baLasalAgilalx. badalige sAmAnayx reVPa hAgU kuLa(La)vanunx baLasalAgide. parxyoVgagaLalilx kUDa vacana BAgadalilx ideV niyamavanunx anusarisalAgide.
+\item kananxDa matutx saMsakxqqti ilAKeya vacana saMpuTagaLiMda ulelxVKagaLanunx Ayekx mADikoMDiruvudariMda muKayx ulelxVKadalilx shakaTareVPa(\char'273) hAgU raLa( ) vanunx baLasalAgilalx. badalige sAmAnayx reVPa hAgU kuLa(La)vanunx baLasalAgide. vacana BAgada parxyoVgagaLalilx kUDa ideV niyamavanunx anusarisalAgide.
 
 \item kAvayxparxyoVgagaLanunx niVDuvAga shakaTareVPa(\char'273) hAgU raLa( ) gaLanUnx mUlAnusAriyAgi baLasalAgide.
 
@@ -252,23 +249,23 @@ padagaLa athaRvanunx vivarisuvAga modalu vAcAyxthaRvanunx athavA sAmAnayxvAda at
 \end{center}
 \medskip
 
-iMtahadoMdu mahatatxvXpUNaRvAda niGaMTu rUpagoLaLxlu kAraNiVBUtarAdavaru sutUtxru jagadugxru shirxV viVrasiMhAsana mahAsaMsAthxna maThada piVThAdhayxkaSxrAda paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx mahAsAvxmigaLavaru. asAdhayxvanunx sAdhayx mADuva avara ceYtanayxkekx I garxMtha oMdu saNaNx udAharaNe aSeTx. jeesfesf saMsethxyu BwtikavAgi mAtarxvalalxde bwdidhxkavAgiyU shirxVmaMtavAgide enunxvudakekx I garxMtha oMdu sAkiSx. idara nimARNa, rUpugoLuLxvikeya hiMde jagadugxrugaLavara saMkalapxshakitx kelasa mADide. idakAkxgi avaru odagisikoTaTx swlaBayx swkayaRgaLu atishayavAdavu. apAra sharxmavanunx beVDuva I kAyaR naDeyuvAga yAvudeV korate uMTAgadaMte paramapUjayxru noVDikoMDaru. mUlataHÀ saMsakxqqtipoVSakarAda shirxVgaLu I apUvaR kAyaRda mUlaka shirxVmaThada sAhitayx-saMsakxqqtiya aunanxtayxvanunx matatxSuTx hecicxsidAdxre. avarige saMpAdaka maMDaLiya paravAgi anaMta parxNAmagaLu.
+iMtahadoMdu mahatatxvXpUNaRvAda niGaMTu rUpagoLaLxlu kAraNiVBUtarAdavaru sutUtxru jagadugxru shirxV viVrasiMhAsana mahAsaMsAthxna maThada piVThAdhayxkaSxrAda paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx mahAsAvxmigaLavaru. asAdhayxvanunx sAdhayx\-vAgisuva avara mahAnf ceYtanayxkekx I garxMtha oMdu saNaNx udAharaNe aSeTx. jeesfesf saMsethxyu BwtikavAgi mAtarxvalalxde bwdidhxkavAgiyU shirxVmaMtavAgide enunxvudakekx I garxMtha oMdu sAkiSx. idara nimARNa, rUpugoLuLxvikeya hiMde pUjayxra saMkalapxshakitx kelasa mADide. avaru saMpAdaka samitige odagisikoTaTx swlaBayx, swkayaRgaLu atishayavAdavu. apAra sharxmavanunx beVDuva I kAyaR naDeyuvAga yAvudeV korate uMTAgadaMte paramapUjayxru noVDikoMDaru. saMsakxqqtipoVSakarAda shirxVgaLu I apUvaR kAyaRda mUlaka shirxVmaThada sAhitayx-saMsakxqqtiya aunanxtayxvanunx matatxSuTx hecicxsidAdxre. avarige saMpAdaka maMDaLiya paravAgi anaMta parxNAmagaLu.
 
 \medskip
 
-I garxMthakekx beVkAda dAshaRnikateyanunx, tAtitxvXka savxrUpavanunx niVDidavaru vijayapurada jAcnxnayoVgAsharxmada pUjayx\break shirxV sidedhxVshavxra mahAsAvxmigaLavaru. avara mAgaRdashaRnadalilx I pAriBASika koVsha paripUNaRteyanunx paDeyalu sAdhayxvAgide. avara sUcaneya meVrege padaniSapxtitx BAga I garxMthadalilx seVpaRDeyAyitu. I garxMthada karaDanunx aneVka bAri gamanisi, pAriBASika padagaLa aMtima Ayekxyalilx atuyxpa\-yukatxvAda salahe, sUcanegaLanunx niVDi avaru namamxnunx keYhiDidu munanxDesidAdxre. avarige haqtUpxvaRkavAda sharaNu sharaNAthiRgaLu.
+I garxMthakekx beVkAda dAshaRnikate, tAtitxvXka savxrUpavanunx niVDidavaru vijayapurada jAcnxnayoVgAsharxmada pUjayx\break shirxV sidedhxVshavxra mahAsAvxmigaLavaru. avara mAgaRdashaRnadalilx I pAriBASika koVsha paripUNaRteyanunx paDeyalu sAdhayxvAgide. avara sUcaneya meVrege padaniSapxtitx BAga I garxMthadalilx seVpaRDeyAyitu.  garxMthada karaDanunx aneVka bAri gamanisi, pAriBASika padagaLa aMtima Ayekxyalilx atuyxpa\-yukatxvAda salahe, sUcanegaLanunx niVDi avaru namamxnunx keYhiDidu munanxDesidAdxre. avarige haqtUpxvaRkavAda sharaNu sharaNAthiRgaLu.
 
 \medskip
 
-I pAriBASika garxMtha racane sArataH oMdu vidavxtetxya kAyaR. idu eSuTx sharxmayukatxvoV aSeTxV veYjAcnxnikavAgi racita\-vAgide. idu I rUpavanunx taLeyalu kAraNarAda vidAvxMsaru hAgU saMpAdaka maMDaLiya sadasayxrugaLAda porx. ji.esf.\break sidadhxliMgayayx, DA. Ti.vi. veMkaTAcala shAsitxrXV, DA. enf.esf. tArAnAtha, DA. ecf.vi. nAgarAjarAvf hAgU saMsakxqqta \hbox{viVrasheYva} pAri\-BASika padakoVshavanunx kananxDakekx anuvAdisikoTuTx I yoVjanege adhikaqta cAlane niVDida DA. si. shivakumArasAvxmi,\break kAyaRnivARhaka saMpAdakaroMdige niraMtaravAgi sahakarisutatx, parxti haMtadalUlx karaDu parxtiyanunx visheVSavAgi parishiVlisikoTaTx shirxV Arf.esf. pUNARnaMda ivarelalxra seVveyanunx kaqtajacnxteyiMda samxrisutetxVve. niGaMTuvina kAyaRdalilx I elalx mahaniVyara pAlogxLuLxvike niGaMTuvige oMdu Ganate taMdu\-koTiTxde. ivarelalxrigU haqtUpxvaRka kaqtajacnxtegaLu.
+I pAriBASika garxMtha racane sArataH oMdu vidavxtitxna kAyaR; atayxMta sharxmadAyakavAda kAyaR. idu atayxMta veYjAcnxnikavAgi, vidavxtUpxNaRvAgi racitavAgideyeMbudu namamx aBipArxya. I rUpavanunx taLeyalu kAraNarAda vidAvxMsaru hAgU saMpAdaka maMDaLiya sadasayxrugaLAda porx. ji.esf.\break sidadhxliMgayayx, DA. Ti.vi. veMkaTAcala shAsitxrXV, DA. enf.esf. tArAnAtha, DA. ecf.vi. nAgarAjarAvf hAgU saMsakxqqta \hbox{viVrasheYva} pAri\-BASika padakoVshavanunx kananxDakekx anuvAdisikoTuTx I yoVjanege adhikaqta cAlane niVDida DA. si. shivakumArasAvxmi,\break kAyaRnivARhaka saMpAdakaroMdige niraMtaravAgi sahakarisutatx, parxti haMtadalUlx karaDu parxtiyanunx visheVSavAgi parishiVlisikoTaTx shirxV Arf.esf. pUNARnaMda ivarelalxra seVveyanunx kaqtajacnxteyiMda samxrisutetxVve. niGaMTuvina kAyaRdalilx I elalx mahaniVyara pAlogxLuLxvike I yoVjanege oMdu Ganateyanunx taMdu\-koTiTxde. ivarelalxrigU haqtUpxvaRka kaqtajacnxtegaLu.
 
 \medskip
 
-I niGaMTuvina kAyaRdalilx namage AraMBadalilx neravAda hiriya vidAvxMsaru, niGaMTu tajacnxru Ada matutx Iga namomxMdi\-gilalxda shirxV imamxDi shivabasava sAvxmigaLu, shirxV ecf. gaMgAdharanf, shirxV enf. basavArAdhayx, DA. esf. vidAyxshaMkara hAgU porx. esf. naMjuMDayayxnavaru avaranUnx manaHpUvaRkavAgi neneyutetxVve.
+I niGaMTuvina kAyaRdalilx namage AraMBadalilx neravAda hiriya vidAvxMsaru, niGaMTu tajacnxru Ada matutx Iga namomxMdi\-gilalxda shirxV imamxDi shivabasava sAvxmigaLu, shirxV ecf. gaMgAdharanf, shirxV enf. basavArAdhayx, DA. esf. vidAyxshaMkara hAgU porx. esf. naMjuMDayayxnavaru avaranUnx manaHpUvaRkavAgi samxrisutetxVve.
 
 \medskip
 
-I garxMtha rUpagoLuLxvalilx sahakarisida parxkaTaNa viBAgada hiMdina nideVRshakashirxV ke.si. shivapapxnavarige, Igina nideVRshaka porx. morabada malilxkAjuRna, shirxV Ti.pi. parxBusAvxmiyavarige matutx yoVjaneya sahAyaka shirxV nagaleR shivakumArfravarige kaqtajacnxtegaLu. I \hbox{yoVjaneyu} acucxkaTATxgi oDamUDalu kAraNarAdavaru shirxVraMga DijiTelf sAPfTxveVrf TekAnxlajisf perxYveVTf limiTeDf kaMpani\-yavaru; adara muKayxsathxrAda porx. si.esf. yoVgAnaMda, shirxV ajuRnf kashayxpf, shirxV Di. shivashaMkarfravara eDebiDada saha\-kArakekx dhanayxvAdagaLu. aneVka goMdalagaLanunx bageharisi nAvu niVDida aneVka toMdaregaLanunx sahisikoMDu, beVsaragoLaLxde 15kUkx hecucx bAri tidudxpaDigaLanunx aLavaDisi, I niGaMTuvina kAyaRvanunx tALemxyiMda mADikoTaTx shirxV eM.pi. rAGaveVMdarx parxsAdf matutx shirxVmati esf. parxtiBAravarigU tuMbu haqdayada kaqtajacnxtegaLu. garxMthakekx muKapuTavanunx racisikoTaTx shirxV maMjunAthfravarige, shirxVmaThada kAyakabaMdhugaLige vaMdanegaLu. 
+I garxMtha rUpagoLuLxvalilx sahakarisida parxkaTaNa viBAgada hiMdina nideVRshakashirxV ke.si. shivapapxnavarige, Igina nideVRshaka porx. morabada malilxkAjuRna, shirxV Ti.pi. parxBusAvxmiyavarige matutx sahAyaka shirxV nagaleR shivakumArfravarige kaqtajacnxtegaLu. I \hbox{yoVjaneyu} acucxkaTATxgi oDamUDalu kAraNarAdavaru shirxVraMga DijiTelf sAPfTxveVrf TekAnxlajisf perxYveVTf limiTeDf kaMpani\-yavaru; adara muKayxsathxrAda porx. si.esf. yoVgAnaMda, shirxV ajuRnf kashayxpf, shirxV Di. shivashaMkarfravara eDebiDada saha\-kArakekx dhanayxvAdagaLu. aneVka goMdalagaLanunx bageharisi nAvu niVDida aneVka toMdaregaLanunx sahisikoMDu, beVsaragoLaLxde 15kUkx hecucx bAri tidudxpaDigaLanunx aLavaDisi, I niGaMTuvina kAyaRvanunx tALemxyiMda mADikoTaTx shirxV eM.pi. rAGaveVMdarx parxsAdf matutx shirxVmati esf. parxtiBAravarigU tuMbu haqdayada kaqtajacnxtegaLu. garxMthakekx athaRpUNaRvAda muKapuTavanunx racisikoTaTx shirxV eM.esf. maMjunAthfravarige, shirxVmaThada kAyakabaMdhugaLige vaMdanegaLu. 
 
 \medskip
 
@@ -276,7 +273,7 @@ I garxMthavanunx acucxkaTATxgi mudirxsikoTaTx lakiSxmXV mudarxNAlaya, beMgaLUru 
 
 \medskip
 
-I pAriBASika padakoVshavu viVrasheYva-liMgAyata dhAmiRka, sAmAjika, sAMsakxqqtika adhayxyana, adhAyxpana hAgU\break saMshoVdhanege bahaLa upayukatx\-vAgali eMbudu I niGaMTu racaneya hiMdina AshayavAgide. samagarxteya kaDege iTaTx daqDha hejejx idAdarU ideV saMpUNaRveMba kalapxne namamxdalalx. paripUNaRteya daqSiTxyiMda I niGaMTige saMbaMdhisidaMte racanAtamxka salahe, sUcanegaLu baMdare avugaLanunx vinayapUvaRkavAgi sivxVkarisi, muMdina mudarxNadalilx aLavaDisikoLuLxtetxVve.
+I pAriBASika padakoVshavu viVrasheYva-liMgAyata dhAmiRka, sAmAjika, sAMsakxqqtika adhayxyana, adhAyxpana hAgU\break saMshoVdhanege bahaLa upayukatx\-vAgali eMbudu I niGaMTu racaneya hiMdina AshayavAgide. samagarxteya kaDege iTaTx daqDha hejejx idAdarU ideV paripUNaRveMba kalapxne namamxdalalx. paripUNaRteya daqSiTxyiMda I niGaMTige saMbaMdhisidaMte racanAtamxka salahe, sUcanegaLu baMdare avugaLanunx vinayapUvaRkavAgi sivxVkarisi, muMdina mudarxNadalilx aLavaDisikoLuLxtetxVve eMdu vinamarxvAgi tiLisaliciCxsutetxVve.
 
 \vskip .5cm
 
