--- a/parxkAshakaranudi.tex
+++ b/parxkAshakaranudi.tex
@@ -10,15 +10,15 @@ sumAru sAvira vaSaRgaLa hiMde coVLacakerxVshavxrana pArxthaRneya meVrege Adijaga
 
 \medskip
 
-I kaqtiya mUla AkaravenanxbahudAda ``viVrasheYva pAriBASika padakoVsha'' saMsakxqqta garxMthavu namamx saMsethxyiMda 2011\,ralilx parxkaTavAyitu. kanARTaka sakARrada aMdina kananxDa matutx saMsakxqqti sacivarAda mAnayx shirxV goVviMda kArajoVLara adhayxkaSxte\-yalilx beMgaLUrinalilx naDeda kaqti biDugaDe samAraMBadalilx upasithxtaridadx halavAru vidAvxMsaru I mwlika kaqtiya kananxDa anuvAda \hbox{tutARgi} AgabeVkeMdu otAtxyisidaru. avara pirxVtipUvaRka Agarxhakekx sapxMdisida mAnayx sacivaru ilAKeyiMda agatayx anudAna\break niVDuvudAgi sathxLadalilxyeV GoVSisidaru aSeTxV alalxde saMsethxyiMda parxsAtxvane salilxsida kUDale maMjUrAti niVDi, haNa biDugaDegoLisidaru. saMsakxqqti matutx vidavxtitxna kelasagaLa kuritaMte shirxV kArajoVLara I Asakitxyanunx mukatxkaMThadiMda shAlxGisutetxVve. hiVge modalige anuvAdaveMdu pArxraMBavAda I kAyaR tananx savxrUpa, vAyxpitxgaLanunx visatxrisikoMDu hosadoMdu baqhatf \hbox{yoVjaneye} Agi rUpu taLeyitu. mUlada kaqtiyu saMsakxqqta AgamagaLige bahuteVka niSaThxvAgidadxre. I hosa kaqtiyu kananxDa viVrasheYva kAvayxgaLu matutx vacanagaLanUnx - kelavu veVLe aparUpada rUDhiya padagaLanUnx - aLavaDisikoMDitu. idara vivara\-gaLanunx kAyaR\-nivARhaka saMpAdaka DA. naMdiVshf haMceyavaru tamamx ``niveVdane''yalilx visAtxravAgi vivarisiruvudariMda matetx adaninxlilx heVLabayasuvudilalx. iMthadoMdu mahatAvxkAMkeSxya kaqti rUpugoLaLxlu sahakarisida saMpAdaka maMDaLiya elalx vidavxnamxNigaLige, vividha riVtiyalilx sAhitayxka sahAyavanunx niVDida vidAvxMsarige, pariNatarige matutx salahegArarige nAvu ABArigaLAgidedxVve.
+I kaqtiya mUla AkaravenanxbahudAda ``viVrasheYva pAriBASika padakoVsha'' saMsakxqqta garxMthavu namamx saMsethxyiMda 2011\,ralilx parxkaTavAyitu. kanARTaka sakARrada aMdina kananxDa matutx saMsakxqqti sacivarAda mAnayx shirxV goVviMda kArajoVLara adhayxkaSxte\-yalilx beMgaLUrinalilx naDeda kaqti biDugaDe samAraMBadalilx upasithxtaridadx halavAru vidAvxMsaru I mwlika kaqtiya kananxDa anuvAda \hbox{tutARgi} AgabeVkeMdu otAtxyisidaru. avara pirxVtipUvaRka Agarxhakekx sapxMdisida mAnayx sacivaru ilAKeyiMda agatayx anudAna\break niVDuvudAgi sathxLadalilxyeV GoVSisidaru aSeTxV alalxde saMsethxyiMda parxsAtxvane salilxsida kUDaleV maMjUrAti niVDi, haNa biDugaDegoLisidaru. saMsakxqqti matutx vidavxtitxna kelasagaLa kuritaMte shirxV kArajoVLara I Asakitxyanunx mukatxkaMThadiMda shAlxGisutetxVve. hiVge modalige anuvAdaveMdu pArxraMBavAda I kAyaR tananx savxrUpa, vAyxpitxgaLanunx visatxrisikoMDu hosadoMdu baqhatf \hbox{yoVjaneyeV} Agi rUpu taLeyitu. mUlada kaqtiyu saMsakxqqta AgamagaLige bahuteVka niSaThxvAgidadxre. I hosa kaqtiyu kananxDa viVrasheYva kAvayxgaLu matutx vacanagaLanUnx - kelavu veVLe aparUpada rUDhiya padagaLanUnx - aLavaDisikoMDitu. idara vivara\-gaLanunx kAyaR\-nivARhaka saMpAdaka DA. naMdiVshf haMceyavaru tamamx ``niveVdane''yalilx visAtxravAgi vivarisiruvudariMda matetx adaninxlilx heVLabayasuvudilalx. iMthadoMdu mahatAvxkAMkeSxya kaqti rUpugoLaLxlu sahakarisida saMpAdaka maMDaLiya elalx vidavxnamxNigaLige, vividha riVtiyalilx sAhitayxka sahAyavanunx niVDida vidAvxMsarige, pariNatarige matutx salahegArarige nAvu ABArigaLAgidedxVve.
 
 \medskip
 
-parxkaTaNa viBAgada hiMdina nideRVshakarAda shirxV ke.si.~shivapapx, parxsutxta nideVRshakarAda porx.~morabada malilxkAjuRna, shirxV Ti.pi. parxBusAvxmi, shirxV nagaleR shivakumArfravarige kaqtajacnxtegaLu salulxtatxve. yoVjaneya DiTipi vinAyxsa matutx rUpureVSegaLanunx\break nivaRhisida shirxVraMga DijiTalf sAPfTxveVrf TekAnxlajiVsf muKayxsathxrAda porx. si.esf. \hbox{yoVgAnaMda} hAgU avara sibabxMdivagaRda shirxV ajuRnf kashayxpf, shirxV Di. shivashaMkarf, shirxV eM. pi. rAGaveVMdarx parxsAdf matutx shirxVmati esf. parxtiBA, muKapuTa vinAyxsakarAda shirxV maMjunAthfravara pirxVtipUvaRka sahAyakekx vaMdanegaLu.
+parxkaTaNa viBAgada hiMdina nideRVshakarAda shirxV ke.si.~shivapapx, parxsutxta nideVRshakarAda porx.~morabada malilxkAjuRna, shirxV Ti.pi. parxBusAvxmi matutx shirxV nagaleR shivakumArfravarige kaqtajacnxtegaLu salulxtatxve. yoVjaneya DiTipi vinAyxsa matutx rUpureVSegaLanunx\break nivaRhisida shirxVraMga DijiTalf sAPfTxveVrf TekAnxlajiVsf muKayxsathxrAda porx. si.esf. \hbox{yoVgAnaMda} hAgU avara sibabxMdivagaRda shirxV ajuRnf kashayxpf, shirxV Di. shivashaMkarf, shirxV eM.pi. rAGaveVMdarx parxsAdf matutx shirxVmati esf. parxtiBA, muKapuTa vinAyxsakarAda shirxV eM.esf. maMjunAthfravara pirxVtipUvaRka sahAyakekx vaMdanegaLu.
 
 \medskip
 
-yoVjanege AthiRka sahAyavanonxdagisida kanARTaka sakARrada kananxDa matutx saMsakxqqti ilAKege - visheVSataH aMdu ilAKeya sacivarAgidadx, iMdu upa muKayxmaMtirxyAgiruva shirxV goVviMda kArajoVLarige - aBimAnapUvaRka vaMdanegaLu.
+yoVjanege AthiRka sahAyavanonxdagisida kanARTaka sakARrada kananxDa matutx saMsakxqqti ilAKege, visheVSataH aMdu ilAKeya sacivarAgidadx, iMdu upa muKayxmaMtirxyAgiruva shirxV goVviMda kArajoVLarige, aBimAnapUvaRka vaMdanegaLu.
 
 \medskip
 
@@ -26,5 +26,5 @@ I yoVjaneya dhiVshakitx matutx kirxyAshakitxgaLAgi mAgaRdashaRna niVDida paramap
 
 \medskip
 
-I pusatxkavanunx atayxlapx kAladalilx suMdaravAgi mudirxsikoTiTxruva \underline{\qquad\qquad} ivarige namamx vaMdanegaLu.
+I pusatxkavanunx atayxlapx kAladalilx suMdaravAgi mudirxsikoTiTxruva beMgaLUrina lakiSxmXV mudarxNAlayadavarige namamx vaMdanegaLu.
 
