--- a/tex-for-print/anubandha-2.tex
+++ b/tex-for-print/anubandha-2.tex
@@ -11,11 +11,11 @@
 %\begin{longtable}{|r|p{10cm}|}
 \begin{longtable}{rl}
 \hline
-{\bf } & \multicolumn{1}{c}{\bf hesaru}\\[3pt]
+\multicolumn{2}{c}{\bf hesaru}\\[3pt]
 \hline
 \endfirsthead
 \hline
-{\bf } & \multicolumn{1}{c}{\bf hesaru}\\[3pt]
+\multicolumn{2}{c}{\bf hesaru}\\[3pt]
 \hline
   & \\[-10pt]
 \endhead
@@ -63,11 +63,11 @@
 %\begin{longtable}{|r|p{10cm}|}
 \begin{longtable}{rl}
 \hline
-{\bf } & \multicolumn{1}{c}{\bf hesaru}\\[3pt]
+\multicolumn{2}{c}{\bf hesaru}\\[3pt]
 \hline
 \endfirsthead
 \hline
-{\bf } & \multicolumn{1}{c}{\bf hesaru}\\[3pt]
+\multicolumn{2}{c}{\bf hesaru}\\[3pt]
 \hline
   & \\[-10pt]
 \endhead
